--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.2.1",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "mysql2": "^3.12.0",
     "prisma": "^6.2.1"
